# twitter-clone

backend/python-fastapi/: main.py  pyproject.toml
backend/python-fastapi/app/: server.py
backend/python-fastapi/app/common/base/: base_config.py  base_schema.py  log_config.py
backend/python-fastapi/app/common/util/: db_util.py
backend/python-fastapi/app/features/db/: database.py  db_config.py  db_session.py  db_util.py  json.py  transactional.py
backend/python-fastapi/app/features/like/: like_association.py
backend/python-fastapi/app/features/retweet/: retweet_association.py
backend/python-fastapi/app/features/security/: security_config.py  security_controller.py  security_schema.py  security_service.py
backend/python-fastapi/app/features/tweet/: tweet.py  tweet_controller.py  tweet_repository.py  tweet_schema.py  tweet_service.py
backend/python-fastapi/app/features/tweet/quote_retweet/: quote_retweet_association.py
backend/python-fastapi/app/features/tweet/reply/: reply_association.py
backend/python-fastapi/app/features/user_account/: user_account.py  user_account_controller.py  user_account_repository.py  user_account_schema.py  user_account_service.py
backend/python-fastapi/app/features/user_account/follower/: follower_association.py  follower_repository.py
backend/python-fastapi/resources/: twitter.db
backend/python-fastapi/resources/ddl/: tweet_ddl.sql  user_account_ddl.sql
backend/python-fastapi/resources/sql/: follower.sql  like.sql  quote_retweet.sql  reply.sql  retweet.sql  tweet.sql  user_account.sql
frontend/typescript-react/: package-lock.json  package.json  tsconfig.paths.json
frontend/typescript-react/src/: App.tsx
frontend/typescript-react/src/common/: axios.ts  local-storage.ts  react-query.ts
(+20 files in other folders)
